Blog Search add

--- a/Front/blog.html
+++ b/Front/blog.html
@@ -10,6 +10,7 @@
 
     <link rel="stylesheet" href="/cilent/assets/css/index.css">
     <link rel="stylesheet" href="/cilent/assets/css/blog.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     <title>Vanguard</title>
 </head>
 
@@ -40,7 +41,7 @@
             </div>
 
             <div class="brand-logo">
-                <a href="/cilent/index.php">VANGUARD</a>
+                <a href="/index.html">VANGUARD</a>
             </div>
 
             <div class="header-icons">
@@ -688,21 +689,306 @@
     <!-- ================================
         HEADER    -    END
 ===================================== -->
+    <main>
 
-    <section class="header-news">
+        <section class="header-news">
 
-        <div class="banner">
-            <video autoplay loop muted plays-inline>
-                <source src="/cilent/assets/videos/Untitled video - Made with Clipchamp (1).mp4" type="video/mp4">
-            </video>
-        </div>
+            <div class="banner">
+                <video autoplay loop muted plays-inline>
+                    <source src="/cilent/assets/videos/Untitled video - Made with Clipchamp (1).mp4" type="video/mp4">
+                </video>
+            </div>
 
-        <h1>BLOGS</h1>
-    </section>
+            <h1>BLOGS</h1>
+        </section>
 
-    <section style="height: 100vh;" class="blog">
 
-    </section>
+
+        <section style="height: 100vh;" class="section blog">
+
+            <nav>
+                <ul class="blog-categories">
+                    <li><a class="active" href="#">ALL</a></li>
+                    <li><a href="#">COMPANY</a></li>
+                    <li><a href="#">FASHION</a></li>
+                    <li><a href="#">STYLE</a></li>
+                    <li><a href="#">TRENDS</a></li>
+                </ul>
+            </nav>
+
+            <div class="blog-container">
+
+
+                
+                <div class="blogs">
+                    
+                </div>
+
+
+
+
+
+
+
+                <a class="searchs-btn" href="#">
+                    <i class="fa-solid fa-magnifying-glass"></i>
+                </a>
+
+                <div class="blog-searchs">
+
+                    <a class="searchs-close-btn" href="#">
+                        <img src="/cilent/assets/icons/close-black.svg" alt="">
+                    </a>
+
+                    <div class="searchs-container">
+                        <input id="searchInput" type="text" placeholder="Search...">
+
+
+                        <ul id="searchResults">
+
+                            <!-- <span>Search not found ...</span> -->
+
+                            <li class="srch-blog">
+                                <a href="#">
+                                    <img src="/cilent/assets/images/products/product.jpg" alt="wqe">
+
+                                    <div class="blog-info">
+                                        <p>Date</p>
+                                        <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam debitis
+                                            tenetur ratione est quo sed in alias natus vitae dolor.</h3>
+                                    </div>
+                                </a>
+                            </li>
+
+                            <li class="srch-blog">
+                                <a href="#">
+                                    <img src="/cilent/assets/images/products/slider.png" alt="wqe">
+
+                                    <div class="blog-info">
+                                        <p>Date</p>
+                                        <h3>Lorem, ipsum dolor sit amet consectetur adipisicing elit</h3>
+                                    </div>
+                                </a>
+                            </li>
+
+                            <li class="srch-blog">
+                                <a href="#">
+                                    <video loop muted plays-inline>
+                                        <source src="/cilent/assets/videos/Untitled video - Made with Clipchamp (1).mp4"
+                                            type="video/mp4">
+                                    </video>
+
+                                    <div class="blog-info">
+                                        <p>Date</p>
+                                        <h3>Lorem, ipsum dolor sit amet consectetur adipisicing elit</h3>
+                                    </div>
+                                </a>
+                            </li>
+
+                            <li class="srch-tag"><a href="#"># Tag</a></li>
+                            <li class="srch-tag"><a href="#"># Tag</a></li>
+                            <li class="srch-tag"><a href="#"># Tag</a></li>
+
+                            <li class="srch-blog">
+                                <a href="#">
+                                    <img src="/cilent/assets/images/products/slider.png" alt="wqe">
+
+                                    <div class="blog-info">
+                                        <p>Date</p>
+                                        <h3>Lorem, ipsum dolor sit amet consectetur adipisicing elit</h3>
+                                    </div>
+                                </a>
+                            </li>
+
+                            <li class="srch-tag"><a href="#"># Tag Lorem ipsum dolor sit amet consectetur adipisicing
+                                    elit.</a>
+                            </li>
+
+
+                            <li class="srch-blog">
+                                <a href="#">
+                                    <img src="/cilent/assets/images/products/product.jpg" alt="wqe">
+
+                                    <div class="blog-info">
+                                        <p>Date</p>
+                                        <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam debitis
+                                            tenetur ratione est quo sed in alias natus vitae dolor.</h3>
+                                    </div>
+                                </a>
+                            </li>
+
+                            <li class="srch-blog">
+                                <a href="#">
+                                    <img src="/cilent/assets/images/products/product.jpg" alt="wqe">
+
+                                    <div class="blog-info">
+                                        <p>Date</p>
+                                        <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam debitis
+                                            tenetur ratione est quo sed in alias natus vitae dolor.</h3>
+                                    </div>
+                                </a>
+                            </li>
+
+                            <li class="srch-blog">
+                                <a href="#">
+                                    <img src="/cilent/assets/images/products/product.jpg" alt="wqe">
+
+                                    <div class="blog-info">
+                                        <p>Date</p>
+                                        <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam debitis
+                                            tenetur ratione est quo sed in alias natus vitae dolor.</h3>
+                                    </div>
+                                </a>
+                            </li>
+
+                            <li class="srch-blog">
+                                <a href="#">
+                                    <img src="/cilent/assets/images/products/product.jpg" alt="wqe">
+
+                                    <div class="blog-info">
+                                        <p>Date</p>
+                                        <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam debitis
+                                            tenetur ratione est quo sed in alias natus vitae dolor.</h3>
+                                    </div>
+                                </a>
+                            </li>
+
+                            <li class="srch-blog">
+                                <a href="#">
+                                    <img src="/cilent/assets/images/products/product.jpg" alt="wqe">
+
+                                    <div class="blog-info">
+                                        <p>Date</p>
+                                        <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam debitis
+                                            tenetur ratione est quo sed in alias natus vitae dolor.</h3>
+                                    </div>
+                                </a>
+                            </li>
+
+                            <li class="srch-blog">
+                                <a href="#">
+                                    <img src="/cilent/assets/images/products/product.jpg" alt="wqe">
+
+                                    <div class="blog-info">
+                                        <p>Date</p>
+                                        <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam debitis
+                                            tenetur ratione est quo sed in alias natus vitae dolor.</h3>
+                                    </div>
+                                </a>
+                            </li>
+
+                            <li class="srch-blog">
+                                <a href="#">
+                                    <img src="/cilent/assets/images/products/product.jpg" alt="wqe">
+
+                                    <div class="blog-info">
+                                        <p>Date</p>
+                                        <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam debitis
+                                            tenetur ratione est quo sed in alias natus vitae dolor.</h3>
+                                    </div>
+                                </a>
+                            </li>
+
+                            <li class="srch-blog">
+                                <a href="#">
+                                    <img src="/cilent/assets/images/products/product.jpg" alt="wqe">
+
+                                    <div class="blog-info">
+                                        <p>Date</p>
+                                        <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam debitis
+                                            tenetur ratione est quo sed in alias natus vitae dolor.</h3>
+                                    </div>
+                                </a>
+                            </li>
+
+                            <li class="srch-blog">
+                                <a href="#">
+                                    <img src="/cilent/assets/images/products/product.jpg" alt="wqe">
+
+                                    <div class="blog-info">
+                                        <p>Date</p>
+                                        <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam debitis
+                                            tenetur ratione est quo sed in alias natus vitae dolor.</h3>
+                                    </div>
+                                </a>
+                            </li>
+
+                        </ul>
+
+                        <div class="selected-tags">
+                            <ul class="selected-tags-list">
+                                <li>
+                                    <p>tag-1</p>
+                                    <a href="#"><img src="/cilent/assets/icons/close-white.svg" alt=""></a>
+                                </li>
+                                <li>
+                                    <p>taasdasdasdg-1</p>
+                                    <a href="#"><img src="/cilent/assets/icons/close-white.svg" alt=""></a>
+                                </li>
+                                <li>
+                                    <p>tag-1</p>
+                                    <a href="#"><img src="/cilent/assets/icons/close-white.svg" alt=""></a>
+                                </li>
+                                <li>
+                                    <p>tag-1</p>
+                                    <a href="#"><img src="/cilent/assets/icons/close-white.svg" alt=""></a>
+                                </li>
+                                <li>
+                                    <p>tag-1</p>
+                                    <a href="#"><img src="/cilent/assets/icons/close-white.svg" alt=""></a>
+                                </li>
+                                <li>
+                                    <p>t</p>
+                                    <a href="#"><img src="/cilent/assets/icons/close-white.svg" alt=""></a>
+                                </li>
+                            </ul>
+
+                        </div>
+
+                        <div class="popular-blogs">
+
+                            <h2>POPULAR BLOGS</h2>
+
+                            <ul class="blog-boxs">
+                                <li class="popular-blog-box">
+                                    <a class="blog-box-img" href="#">
+                                        <img src="/cilent/assets/images/products/product.jpg" alt="">
+                                    </a>
+
+                                    <div class="blog-box-info">
+                                        <p>Date</p>
+                                        <a href="#">Lorem ipsum dolor ssssssssssssssssssssssssssssssit amet</a>
+                                    </div>
+
+                                </li>
+
+                                <li class="popular-blog-box">
+                                    <a class="blog-box-img" href="#">
+                                        <img src="/cilent/assets/images/products/slider-2.webp" alt="">
+                                    </a>
+
+                                    <div class="blog-box-info">
+                                        <p>Date</p>
+                                        <a href="#">Lorem ipsum dolor sit adsfsdmsssssssssssssset</a>
+                                    </div>
+                                </li>
+                            </ul>
+
+
+
+                        </div>
+
+
+                    </div>
+
+                </div>
+
+
+            </div>
+
+        </section>
+    </main>
+
     <!-- ================================
         FOOTER    -    START
 ===================================== -->
