--- a/Front/shop.html
+++ b/Front/shop.html
@@ -1078,7 +1078,7 @@
                     </div> -->
 
 
-                    <ul class="products-cart toggle grid " data-name="grid">
+                    <ul class="products-cart toggle grid active" data-name="grid">
 
 
 
@@ -1086,7 +1086,7 @@
 
 
                             <!-- active -->
-                            <div class="product-image-box ">
+                            <div class="product-image-box">
 
 
 
@@ -2088,7 +2088,7 @@
 
 
 
-                    <ul class="products-detail-cart toggle detail active" data-name="detail">
+                    <ul class="products-detail-cart toggle detail " data-name="detail">
 
 
                         <li class="product-box">
