Account Page Modified

--- a/Front/index.html
+++ b/Front/index.html
@@ -570,63 +570,60 @@
         <section class="section collection">
 
             <h1>The Most Trendy Pieces of Summer are at Vanguard</h1>
+
+
             <div class="collection-area">
 
+                <div class="list-one" style="background-image: url(/cilent/assets/images/products/product.jpg);">
+                    <div class="list-one-card">
 
-                <div class="collection-list">
+                        <div class="list-one-info">
+                            <P>HOT LIST</P>
+                            <a href="#">T-SHIRT COLLECTION</a>
+                        </div>
 
-                    <div class="list-one" style="background-image: url(/cilent/assets/images/products/product.jpg);">
-                        <div class="list-one-card">
+                        <div class="one-btn">
+                            <a >SHOP NOW</a>
+                        </div>
 
-                            <div class="list-one-info">
+                    </div>
+                </div>
+
+                <div class="list-two">
+
+                    <div class="list-two-product"
+                        style="background-image: url(/cilent/assets/images/products/product.jpg);">
+
+
+                        <div class="list-two-card">
+
+                            <div class="list-two-info">
                                 <P>HOT LIST</P>
-                                <a href="#">T-SHIRT COLLECTION</a>
+                                <a >T-SHIRT COLLECTION</a>
                             </div>
 
-                            <div class="one-btn">
-                                <a href="#">SHOP NOW</a>
+                            <div class="two-btn">
+                                <a >SHOP NOW</a>
                             </div>
 
                         </div>
+
                     </div>
 
-                    <div class="list-two">
 
-                        <div class="list-two-product"
-                            style="background-image: url(/cilent/assets/images/products/product.jpg);">
+                    <div class="list-two-gift" style="background-image: url(/cilent/assets/images/settings/bg-2.svg);">
 
-
-                            <div class="list-two-card">
-
-                                <div class="list-two-info">
-                                    <P>HOT LIST</P>
-                                    <a href="#">T-SHIRT COLLECTION</a>
-                                </div>
-
-                                <div class="two-btn">
-                                    <a href="#">SHOP NOW</a>
-                                </div>
-
-                            </div>
-
+                        <div class="gift-info">
+                            <a>E-GIFT CARDS</a>
+                            <a>Surprise someone with the gift theyreally want.</a>
                         </div>
 
-
-                        <div class="list-two-gift"
-                            style="background-image: url(/cilent/assets/images/settings/bg-2.svg);">
-
-                            <div class="gift-info">
-                                <a href="#">E-GIFT CARDS</a>
-                                <a href="#">Surprise someone with the gift theyreally want.</a>
-                            </div>
-
-                            <a class="shop-btn" href="#">SHOP NOW</a>
-
-                        </div>
+                        <a class="shop-btn">SHOP NOW</a>
 
                     </div>
 
                 </div>
+
 
             </div>
 
