--- a/Front/shop.html
+++ b/Front/shop.html
@@ -4,19 +4,57 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+    <meta name="description"
+        content="Vanguard offers stylish and comfortable men's and women's activewear. Explore our moisture-wicking shirts, breathable pants, and gym shorts with pockets.">
+    <meta name="keywords"
+        content="men's activewear, men's moisture-wicking shirts, men's breathable workout pants, men's gym shorts with pockets, men's activewear Baku, women's activewear, women's moisture-wicking shirts, women's breathable workout pants, women's gym shorts with pockets, women's activewear Baku">
+    <meta name="robots" content="index, follow">
+    <meta name="author" content="Vanguard">
+    <!-- Open Graph meta tags -->
+    <meta property="og:title" content="Vanguard: Men's & Women's Activewear | Stylish Performance Clothing">
+    <meta property="og:description"
+        content="Vanguard offers stylish and comfortable men's and women's activewear. Explore our moisture-wicking shirts, breathable pants, and gym shorts with pockets.">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://vanguardaz.netlify.app/">
+    <meta property="og:image" content="https://vanguardaz.netlify.app//images/logo.png">
+    <!-- Twitter Card meta tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Vanguard: Men's & Women's Activewear | Stylish Performance Clothing">
+    <meta name="twitter:description"
+        content="Vanguard offers stylish and comfortable men's and women's activewear. Explore our moisture-wicking shirts, breathable pants, and gym shorts with pockets.">
+    <meta name="twitter:image" content="https://vanguardaz.netlify.app//images/logo.png">
+    <!-- Geo Meta Tags -->
+    <meta name="geo.region" content="AZ" />
+    <meta name="geo.placename" content="Baku" />
+    <!-- Facebook Meta Tags -->
+    <meta property="fb:app_id" content="YOUR_FACEBOOK_APP_ID">
+    <!-- Instagram Meta Tags -->
+    <meta property="instagram:card" content="summary_large_image">
+    <meta property="instagram:title" content="Vanguard: Men's & Women's Activewear | Stylish Performance Clothing">
+    <meta property="instagram:description"
+        content="Vanguard offers stylish and comfortable men's and women's activewear. Explore our moisture-wicking shirts, breathable pants, and gym shorts with pockets.">
+    <meta property="instagram:image" content="https://vanguardaz.netlify.app//images/logo.png">
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://vanguardaz.netlify.app/" />
+    <!-- Favicon -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Manrope&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+        rel="stylesheet">
     <!-- Link Swiper's CSS -->
     <link rel="stylesheet" href="/cilent/assets/css/swiper-bundle.min.css">
-
     <link rel="stylesheet" href="/cilent/assets/css/index.css">
     <link rel="stylesheet" href="/cilent/assets/css/shop.css">
+    <!-- Favicon -->
+    <link rel="icon" href="/cilent/assets/icons/small-logo.svg" sizes="192x192" type="image/x-icon" />
+    <link rel="stylesheet" href="/cilent/assets/css/swiper-bundle.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+
     <title>Vanguard</title>
 </head>
-
 <body>
-    <div id="loader"></div>
 
     <!-- ================================
         HEADER    -    START
@@ -34,6 +72,7 @@
                 <nav class="pages-pc">
                     <ul>
                         <li><a href="/index.html">Home</a></li>
+                        <li><a href="/shop.html">Shop</a></li>
                         <li><a href="/about.html">About</a></li>
                         <li><a href="/blog.html">Blog</a></li>
                         <li><a href="/contact.html">Contact</a></li>
@@ -1078,7 +1117,7 @@
                     </div> -->
 
 
-                    <ul class="products-cart toggle grid " data-name="grid">
+                    <ul class="products-cart toggle grid active" data-name="grid">
 
 
 
@@ -2088,7 +2127,7 @@
 
 
 
-                    <ul class="products-detail-cart toggle detail active" data-name="detail">
+                    <ul class="products-detail-cart toggle detail " data-name="detail">
 
 
                         <li class="product-box">
